fixes navbar not showing

--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -7,7 +7,7 @@
   justify-content: space-between;
   padding: 0 20px;
   box-sizing: border-box;
-  overflow: hidden;
+  overflow: visible;
 }
 
 .navbar::before {
@@ -91,6 +91,7 @@
 @media only screen and (max-width: 600px) {
   .navbar {
     width: 100vw;
+    overflow: visible;
   }
 
   .toggleButton {
@@ -102,37 +103,35 @@
   }
 
   .links {
-    display: none;
     flex-direction: column;
     position: absolute;
     top: 100px;
     right: 0;
     background-color: rgba(0, 0, 0, 0.9);
     width: 100%;
-    height: auto;
     max-height: 80vh;
     padding: 20px;
     box-sizing: border-box;
     border-radius: 0 0 10px 10px;
-    transform: translateY(-100%);
-    transition: transform 0.3s ease;
+    transform: translateY(0);
+    transition: transform 0.3s ease, opacity 0.3s ease;
     opacity: 0;
     visibility: hidden;
+    z-index: 999;
+    align-items: center;
   }
 
   .links.active {
-    display: flex;
+    transform: translateY(0);
     opacity: 1;
     visibility: visible;
-    z-index: 1000;
   }
 
   .links a {
     width: 100%;
     text-align: center;
-    padding: 10px;
+    padding: 6px;
     margin: 10px 0;
-    border-bottom: 1px solid rgba(255, 255, 255, 0.1);
   }
   .mobile-moon {
     display: block;
